[gd_scene format=3 uid="uid://civo2w33n3ek3"]

[ext_resource type="Script" uid="uid://borbhw8rwkp5f" path="res://scripts/checkpoint.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://4id73mf3wf1j" path="res://assets/level_elements/checkpoint_off.png" id="2"]
[ext_resource type="FontFile" uid="uid://18u6y0h0gaqi" path="res://assets/fonts/PixeligCursief.ttf" id="4"]

[sub_resource type="CanvasItemMaterial" id="2"]
blend_mode = 1

[sub_resource type="Gradient" id="3"]
offsets = PackedFloat32Array(0, 0.7)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="4"]
gradient = SubResource("3")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.5)

[sub_resource type="CircleShape2D" id="1"]
radius = 26.0

[node name="Checkpoint" type="Node2D" unique_id=663553948]
scale = Vector2(1.25, 1.25)
script = ExtResource("1")

[node name="CheckpointSprite" type="Sprite2D" parent="." unique_id=660261602]
z_index = -30
texture = ExtResource("2")

[node name="GlowTop" type="Sprite2D" parent="." unique_id=1291355193]
modulate = Color(1, 0.329412, 0, 0)
z_index = -29
material = SubResource("2")
position = Vector2(0, -10)
texture = SubResource("4")

[node name="InteractArea" type="Area2D" parent="." unique_id=529207183]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" unique_id=145631328]
shape = SubResource("1")

[node name="PromptLabel" type="Label" parent="." unique_id=2009715227]
visible = false
offset_left = -8.0
offset_top = -54.0
offset_right = -8.0
offset_bottom = -54.0
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.796078, 0.682353, 0.145098, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 20
text = "G"
